logs/zc.metarecipe.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/metarecipe'...
Compiling './lib/python3.5/site-packages/zc/metarecipe/__init__.py'...
***   File "./lib/python3.5/site-packages/zc/metarecipe/__init__.py", line 34
    def stringify(section, (key, value)):
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zc/metarecipe/testing.py'...
***   File "./lib/python3.5/site-packages/zc/metarecipe/testing.py", line 9
    print "[%s]" % name
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zc/metarecipe/tests.py'...
***   File "./lib/python3.5/site-packages/zc/metarecipe/tests.py", line 46
    print 'raw setitem', name, value
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zc.metarecipe-0.2.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
